--- a/src/main/javascript/sdk1.7.1/html/sdk/section_3/tools/resourcesigner/index.html
+++ b/src/main/javascript/sdk1.7.1/html/sdk/section_3/tools/resourcesigner/index.html
@@ -57,7 +57,7 @@
 							    <option value="129">PAN or CVV</option>
 					      	</select>
 			  			</div>
-			  			<input type="submit" class="btn btn-default" value="Submit Request" />
+			  			<input type="submit" class="btn btn-primary" value="Submit Request" />
 			  		</div>
 				</form>
 			</div>
