more changes to SDK

--- a/src/main/javascript/sdk1.7.1/html/sdk/section_3/index.html
+++ b/src/main/javascript/sdk1.7.1/html/sdk/section_3/index.html
@@ -79,7 +79,7 @@
         <a href='/html/sdk/documentation/spdkit.files/Luxe_Inject_Test_Keys.sct'>Luxe_Inject_Test_Keys.sct</a>
         SPDKit.exe script file.  This is a simple text file that may be viewed or modified using a text editor
         <p>
-            This <a href='/cgi-bin/defaultapp/key?function=local'>link</a> puts the Luxe terminal into <b><i>local key injection</i></b>
+            This <a href='/cgi-bin/platform/key?function=local'>link</a> puts the Luxe terminal into <b><i>local key injection</i></b>
             mode and waits for the key inction to be completed.  While in this mode,
             the smart card interface device operates as a local key injection port.<br>
             <img src='/html/sdk/assets/images/Luxe_key_injection_1.jpg' width='300px'>
@@ -97,7 +97,7 @@
         This utility can take an application directory structure, and create a development signed .RPM file that
         can be installed into a development terminal using the HTTP API <b>package/load?install=true</b> command.
         <ul>
-            <li><a href='/html/sdk/installationcreator'>Documentation on creating a Luxe RPM</a></li>
+            <li><a href='/html/sdk/section_3/tools/installationcreator'>Documentation on creating a Luxe RPM</a></li>
         </ul>
 
         <h1 id="par-5">Luxe ResourceSigner</h1>
@@ -107,6 +107,8 @@
         <ul>
             <li><a href='/html/sdk/section_3/tools/resourcesigner'>Tool</a></li>
         </ul>
+    <hr>
+	<font size='-2'>This page is installed in /home/sdk/html/section_3/tools/installationcreator/index.html</font>
     </div>
 </div>
 </body>
