more sdk files added and formatted.

--- a/src/main/javascript/sdk1.7.1/html/sdk/section_1/test_pages/page.html
+++ b/src/main/javascript/sdk1.7.1/html/sdk/section_1/test_pages/page.html
@@ -43,7 +43,7 @@
                                 var pageName = pageNames[p];
                                 var html = '<li onclick="onShowAppPage(\'' + appName + '\',\'' + pageName+ '\')">' +
                                         '<div>' +
-                                        '<img style="float: left; max-height: 32px;" src="/html/sdk/assets/images/html-page-icon.png"/>' +
+                                        '<img style="float: left; max-height: 32px;" src="/html/sdk/assets/images/html-page-icon.jpg"/>' +
                                         '<div class="text-limit-2-line" style="float: left; padding-left: 5px; word-wrap: break-word; width: 105px;">' + pageName + '</div>' +
                                         '</div>' +
                                             //                                         '<a href="" class="standard_link edit-item" ng-click="onProjectEdit(appName, project)">Edit</a>' +
