--- a/src/main/javascript/sdk1.7.1/html/sdk/section_3/tools/installationcreator/step3.html
+++ b/src/main/javascript/sdk1.7.1/html/sdk/section_3/tools/installationcreator/step3.html
@@ -92,7 +92,7 @@ $(document).ready(function() {
   <input type="text" name="Version" value="" hidden>
   <input type="text" name="Release" value="" hidden>
   <input type="text" name="Vendor" value="" hidden>
-  <button class="btn" type="submit" id="selection1" name="selection" value="Create RPM">Create RPM</button> or <button class="btn" id="selection2" type="submit" name="selection" value="Go back">Go back</button>
+  <button class="btn btn-primary" type="submit" id="selection1" name="selection" value="Create RPM">Create RPM</button> or <button class="btn btn-primary" id="selection2" type="submit" name="selection" value="Go back">Go back</button>
 </form>
 <hr>
 <font size='-2'>This page is installed in /home/sdk/html/section_3/tools/installationcreator/step4.html</font>
