--- a/src/main/javascript/sdk1.7.1/html/sdk/section_3/tools/installationcreator/step4.html
+++ b/src/main/javascript/sdk1.7.1/html/sdk/section_3/tools/installationcreator/step4.html
@@ -62,7 +62,7 @@ $(document).ready(function() {
   </div>
   <form action='index.html'>
     <input type="text" name="step" value="4" hidden>
-    <input class="btn" type="submit" name="selection" value="Go back">
+    <input class="btn btn-primary" type="submit" name="selection" value="Go back">
   </form>
 <hr>
 <font size='-2'>This page is installed in /home/sdk/html/section_3/tools/installationcreator/step4.html</font>
