--- a/src/main/javascript/sdk1.7.1/html/sdk/section_3/tools/packageinstaller/index.html
+++ b/src/main/javascript/sdk1.7.1/html/sdk/section_3/tools/packageinstaller/index.html
@@ -535,6 +535,8 @@ date +"%a %b %d %Y"
 			</TABLE>
 			<p>The rest of the section is a free text field, but should be
 				organized in some coherent manner.</p>
+		<hr>
+		<font size='-2'>This page is installed in /home/sdk/html/packageinstaller/index.html</font>
 		</div>
     </div>
 </BODY>
