--- a/src/main/javascript/sdk1.7.1/html/sdk/section_1/test_pages.html
+++ b/src/main/javascript/sdk1.7.1/html/sdk/section_1/test_pages.html
@@ -57,8 +57,10 @@
   <ul id="test_tabs" class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active11"><a href="#admin_tab" aria-controls="home" role="tab" data-toggle="tab" eq-test-page="test_pages/administration.html">Administration</a></li>
     <li role="presentation"><a href="#params_and_vars_tab" aria-controls="profile" role="tab" data-toggle="tab" eq-test-page="test_pages/parameters_and_vars.html">Parameters and Variables</a></li>
-    <!--<li role="presentation"><a href="#prompts_and_sec_inputs_tab" aria-controls="messages" role="tab" data-toggle="tab" eq-test-page="test_pages/prompts_and_secure_inputs.html">Prompts and Secure Input</a></li>-->
+    <li role="presentation"><a href="#prompts_and_sec_inputs_tab" aria-controls="messages" role="tab" data-toggle="tab" eq-test-page="test_pages/prompts_and_secure_inputs.html">Prompts and Secure Input</a></li>
+    <li role="presentation"><a href="#page_tab" aria-controls="messages" role="tab" data-toggle="tab" eq-test-page="test_pages/p2pe.html">P2PE and Card Input</a></li>
     <li role="presentation"><a href="#page_tab" aria-controls="messages" role="tab" data-toggle="tab" eq-test-page="test_pages/page.html">Page</a></li>
+    <li role="presentation"><a href="#page_tab" aria-controls="messages" role="tab" data-toggle="tab" eq-test-page="test_pages/paymentengine.html">Payment Engine</a></li>
   </ul>
 
   <!--<iframe id="testPageFrame" width="100%" height="800px" frameBorder="0"></iframe>-->
