--- a/src/main/javascript/sdk1.7.1/html/sdk/section_2/test_pages.html
+++ b/src/main/javascript/sdk1.7.1/html/sdk/section_2/test_pages.html
@@ -4,76 +4,157 @@
   <meta charset="UTF-8">
   <title></title>
 
-  <link rel="stylesheet" type="text/css" href="/html/sdk/assets/css/styles.css">
-  <link  rel="stylesheet" href="/html/sdk/components/bootstrap-3.3.7/css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="/html/sdk/assets/css/styles.css">
+    <link  rel="stylesheet" href="/html/sdk/components/bootstrap-3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/html/sdk/components/bootstrap-3.3.7/css/bootstrap-theme.min.css">
 
-  <script type="text/javascript" src="/html/sdk/components/jquery-2.2.4/jquery.js"></script>
-  <script type="text/javascript" src="/html/sdk/components/bootstrap-3.3.7/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/html/sdk/components/mustache-2.3.0/mustache.min.js"></script>
+    <script type="text/javascript" src="/html/sdk/components/jquery-2.2.4/jquery.js"></script>
+    <script type="text/javascript" src="/html/sdk/components/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/html/sdk/components/mustache-2.3.0/mustache.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/html/sdk/components/ace-builds-18.06.17/src-min-noconflict/ace.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/html/sdk/components/ace-builds-18.06.17/src-min-noconflict/ext-static_highlight.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/html/sdk/components/ace-builds-18.06.17/src-min-noconflict/mode-xml.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/html/sdk/components/ace-builds-18.06.17/src-min-noconflict/theme-chrome.js"></script>
 
-  <script type="text/javascript" src="/html/sdk/assets/js/app.js"></script>
-
-  <!--<script type="text/javascript" src="/common/jphoenix.js"></script>-->
-  <!--<script type="text/javascript" src="/common/jutils.js"></script>-->
-
-  <script type="text/javascript">
-    function openTestPage(page) {
-      $("#testPageFrame").attr('src', page);
-    }
-
+    <script type="text/javascript" src="/html/sdk/assets/js/app.js"></script>
+    
+     <script> 
     $(document).ready(function() {
-      $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
-        var testPage = e.target.getAttribute("eq-test-page");
-        openTestPage(testPage);
-      });
+    	$("#resultContainer").hide(250);
+     $("#paymentEngine").submit(function(e) {
+         var url = "/cgi-bin/sdk/payment.cgi";
+         $.ajax({
+                type: "GET",
+                url: url,
+                data: $("#resourceSigner").serialize(), // serializes the form's elements.
+                success: function(response){
+                	$("#formContainer").hide(250);
+						$("#resultContainer").show(250);
+						$("#getFileResponse")[0].innerText = response;
+                },
+              });
 
-      //open admin as default tab
-      $('#test_tabs a[href="#admin_tab"]').tab('show');
+         e.preventDefault(); // avoid to execute the actual submit of the form.
+     });
+     $('#goBack').click(function(){
+    	 $("#formContainer").show(250);
+    	 $("#resultContainer").hide(250);
+    	 $('#paymentEngine')[0].reset();
+    	 $("#getFileResponse")[0].innerText = '';
+     });
     });
-    function resizeIframe(obj){
-//      obj.style.height = 0;
-//      obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-    }
-
-  </script>
+    </script>
 
 </head>
 <body>
 <nav style="background-image: url('/html/sdk/assets/images/bar.png'); background-size: 100%; padding-left: 15px;">
   <img src='/html/sdk/assets/images/logo.png' style="vertical-align: baseline;">
   <div style="display: inline-block; font-family: sans-serif; height: 36px;">
-    <a href="/html/sdk/index.html" style="font-size: 26px; font-weight: bold; color: white;">Luxe Software Development Kit</a>
+    <a href="/html/sdk/index.html" style="font-size: 26px; font-weight: bold; color: white;">Luxe Software Development Kit</a>&nbsp&nbsp&nbsp&nbsp
     <a href="javascript:openAboutWindow();" style="font-size: 10px; color: white;">SDK version</a>
     <a href="javascript:openAboutFullWindow();" style="font-size: 10px; color: white;">Full version</a>
   </div>
 </nav>
 <div class="container-fluid">
-  <h1>Payment Engine Test Pages</h1>
-  <h2>EMV Integration Guide</h2>
+	<div id="sidebar-menu" class="col-md-3 hidden-xs hidden-sm">
+        <ul class="main-menu nav nav-stacked affix">
+        </ul>
+    </div>
+    <div id="static-content" class="col-md-9">
+    	<h1 id="par-1">Payment Engine Test Pages</h1>
+  <h2 id="sub-par-1-1">EMV Integration Guide</h2>
   The EMV Integration guide describes how to communicate to the EMV Automation system on the Luxe series of terminals. The EMV Automation system can also operate as a front end processor for non-EMV card payment transactions.
   For more info, see printable version of the complete <a href='/html/sdk/documentation/Luxe_Integration_Guide.pdf'>documentation</a>.
-  <h2>Test Pages</h2>
-  <ul>
-    <li><a href='/cgi-bin/sdk/payment.cgi'>payment/start</a> - Start a payment transaction with amount $10.00, tran type = Sale...
-      <pre style="width: 500px;">
-# Emv.LegacyMSD=0 -- use EMV configuration from EMV_CONF.xml
-# Emv.Tag.9F02 -- amount authorized (numeric)
-# Emv.Tag.81 -- amount authorized (binary)
-# Emv.Tag.9C=00 -- transaction type = Sale
-# Emv.Tag.EQ07 -- various automation settings
-# EncType=M -- PIN encryption type Master/Session
-# mindex -- PIN encryption injected master key ID
-# wkey -- PIN encryption Master/Session session (working) key
-      </pre>
-    </li>
-    <li>payment/continue - Supply requested information back to the payment engine and continue</li>
-  </ul>
-  <h2>EMV Configuration functions</h2>
+  <h2 id="sub-par-1-2">Test Pages</h2>
+  <div class="container" id="formContainer">
+  <form id="paymentEngine"> 
+  	 <div class="form-group row">
+      <label class="control-label col-sm-2" for="Emv.LegacyMSD">Emv.LegacyMSD:</label>
+      <div class="col-sm-4">
+        <input type="number" class="form-control" id="Emv.LegacyMSD" value="0" name="Emv.LegacyMSD" required>
+        <small id="Emv.LegacyMSD" class="form-text text-muted">use EMV configuration from EMV_CONF.xml</small>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="control-label col-sm-2" for="Emv.Tag.9F02">Emv.Tag.9F02:</label>
+      <div class="col-sm-4">          
+        <input type="number" class="form-control" id="Emv.Tag.9F02" value="10" name="Emv.Tag.9F02" required>
+        <small id="Emv.LegacyMSD" class="form-text text-muted">amount authorized (numeric)</small>
+      </div>
+    </div>
+    <div class="form-group row">        
+      <label class="control-label col-sm-2" for="Emv.Tag.81">Emv.Tag.81:</label>
+      <div class="col-sm-4">          
+        <input type="text" class="form-control" id="Emv.Tag.81" value="10.00" name="Emv.Tag.81" required>
+        <small id="Emv.LegacyMSD" class="form-text text-muted">amount authorized (binary)</small>
+      </div>
+    </div>
+    <div class="form-group row">        
+      <label class="control-label col-sm-2" for="Emv.Tag.9C">Emv.Tag.9C:</label>
+      <div class="col-sm-4">          
+	  <select class="form-control" id="Emv.Tag.9C" name="Emv.Tag.9C" required>
+	    <option value="00">Sale</option>
+	  </select>
+        <small id="Emv.LegacyMSD" class="form-text text-muted">transaction type = Sale</small>
+	  </div>
+    </div>
+    <div class="form-group row">        
+      <label class="control-label col-sm-2" for="Emv.Tag.EQ07">Emv.Tag.EQ07:</label>
+      <div class="col-sm-4">          
+        <input type="text" class="form-control" id="Emv.Tag.EQ07" value="10" name="Emv.Tag.EQ07" required>
+        <small id="Emv.LegacyMSD" class="form-text text-muted">various automation settings</small>
+      </div>
+    </div>
+    <div class="form-group row">        
+      <label class="control-label col-sm-2" for="EncType">EncType:</label>
+      <div class="col-sm-4">          
+	  <select class="form-control" id="EncType" name="EncType" required>
+	    <option value="M">Master</option>
+	    <option value="S">Session</option>
+	  </select>
+        <small id="Emv.LegacyMSD" class="form-text text-muted">PIN encryption type Master/Session</small>
+	  </div>
+    </div>
+    <div class="form-group row">        
+      <label class="control-label col-sm-2" for="mindex">mindex:</label>
+      <div class="col-sm-4">          
+        <input type="text" class="form-control" id="mindex" value="1" name="mindex" required>
+        <small id="Emv.LegacyMSD" class="form-text text-muted">use EMV configuration from EMV_CONF.xml</small>
+      </div>
+    </div>
+    <div class="form-group row">        
+      <label class="control-label col-sm-2" for="wkey">wkey:</label>
+      <div class="col-sm-4">          
+        <input type="text" class="form-control" id="wkey" value="D85A35712D64465FD85A35712D64465FD85A35712D64465F" name="wkey" required>
+        <small id="Emv.LegacyMSD" class="form-text text-muted">PIN encryption Master/Session session (working) key</small>
+      </div>
+    </div>
+    <div class="form-group">        
+      <div class="col-sm-offset-2">
+        <button type="submit" class="btn btn-primary">Payment/start</button>
+      </div>
+    </div>
+  </form>
+  <p>payment/continue - Supply requested information back to the payment engine and continue</p>
+  </div>
+  <div id="resultContainer" class="container">
+			  <button class="btn btn-default" id="goBack" value="EMV Test"> <span class="glyphicon glyphicon-backward"></span>EMV Test</button>
+				<div style="margin-top: 5px;">
+                <b>HTTP Response</b>
+                <pre id="getFileResponse" class="highlight-code" ace-mode="ace/mode/xml" ace-theme="ace/theme/chrome" ace-gutter="true"></pre>
+            </div>			
+			</div>  
+  
+  <h2 id="sub-par-1-3">EMV Configuration functions</h2>
   <ul>
     <li>Update / Replace EMV_CONF.XML</li>
     <li>Update / Replace EMV_CAPK.XML</li>
     <li>Update / Replace one of the Default EMV Automation Screens</li>
     <li>Update / Replace the system global prompts.XML file</li>
   </ul>
+  <hr>
+		<font size="-2">This page is located in /home/sdk/html/section_2/test_pages.html</font>
+    </div>
 </div>
+  
 </body>
