--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,8 +2,10 @@
 <html>
 <body>
 	<script	type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
-	<h2>JavaScript Functions</h2>
+	<script type="text/javascript" src="node_modules/bootstrap/dist/css/bootstrap.min.css"></script>
+	<script type="text/javascript" src="node_modules/bootstrap/dist/css/bootstrap.min.js"></script>
+	<script type="text/javascript" src="javascript/app.js"></script>
+	<h2>JavaScript Tutorial</h2>
 	<p>This example calls a function which performs a calculation, and
 		returns the result:</p>
 	<p id="demo"></p>
