--- a/src/web/index.html
+++ b/src/web/index.html
@@ -7,5 +7,33 @@
 	<p>This example calls a function which performs a calculation, and
 		returns the result:</p>
 	<p id="demo"></p>
+	<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+</style>
 </body>
+<ul>
+  <li><a href="html/session1.html">Session1</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 </html>
